# app/Http/Controllers/NotebookController.php
@@ -6,6 +6,7 @@ use App\Http\Requests\StoreNotebookRequest;
 use App\Http\Requests\UpdateNotebookRequest;
 use App\Http\Resources\NotebookResource;
 use App\Models\Notebook;
+use Illuminate\Http\Response;
 use OpenApi\Annotations as OA;
 
 class NotebookController extends Controller
@@ -18,20 +19,86 @@ class NotebookController extends Controller
      *     summary="Получение всех записей",
      *     @OA\Response(
      *          response=200,
-     *          description="Успешно",
+     *          description="Successful operation",
      *          @OA\JsonContent(ref="#/components/schemas/Notebook")
-     *     )
+     *     ),
+     *     @OA\Response(
+     *          response="204",
+     *          description="No content",
+     *     ),
      * )
      *
      */
     public function index()
     {
+        $data = Notebook::query()->get()->all();
+        abort_if(empty($data), Response::HTTP_NO_CONTENT);
+
         $data = Notebook::query()->paginate(5, ['*'],'page');
         return NotebookResource::collection($data);
     }
 
     /**
-     * Store a newly created resource in storage.
+     * @OA\Post(
+     *     path="api/v1/notebook",
+     *     operationId="newRecord",
+     *     tags={"Notebook"},
+     *     summary="Добавление записи",
+     *     @OA\RequestBody(
+     *          required=true,
+     *          description="Запрос",
+     *          @OA\JsonContent(
+     *              type="object",
+     *                      @OA\Property(
+     *                          property="initials",
+     *                          type="string",
+     *                          example="Bob Big Finger"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="company",
+     *                          type="string",
+     *                          example="Future"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="phone",
+     *                          type="string",
+     *                          example="88005553535"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="email",
+     *                          type="string",
+     *                          example="bobbigone@gmail.com"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="birthday",
+     *                          type="string",
+     *                          example="1935-04-15T00:00:00.000000Z"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="photo",
+     *                          type="string",
+     *                          example="uuid()"
+     *                      ),
+     *          ),
+     *     ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/Notebook")
+     *     ),
+     *     @OA\Response(
+     *          response="401",
+     *          description="Unauthenticated",
+     *     ),
+     *     @OA\Response(
+     *          response="403",
+     *          description="Forbidden",
+     *     ),
+     *     @OA\Response(
+     *          response="404",
+     *          description="Resource Not Found",
+     *     ),
+     * )
      */
     public function store(StoreNotebookRequest $request)
     {
@@ -41,29 +108,139 @@ class NotebookController extends Controller
     }
 
     /**
-     * Display the specified resource.
+     * @OA\Get(
+     *     path="api/v1/notebook/{id}",
+     *     operationId="recordById",
+     *     tags={"Notebook"},
+     *     summary="Получение выбранной записи",
+     *     @OA\Parameter(
+     *          name="id",
+     *          description="Note id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/Notebook")
+     *     ),
+     *     @OA\Response(
+     *          response="404",
+     *          description="Resource Not Found",
+     *     ),
+     * )
      */
     public function show(string $id)
     {
-        return Notebook::query()->findOrFail($id);
+        $note = Notebook::query()->findOrFail($id);
+        abort_if(empty($note), Response::HTTP_NOT_FOUND);
+        return $note ;
     }
 
     /**
-     * Update the specified resource in storage.
+     * @OA\Post(
+     *     path="api/v1/notebook/{id}",
+     *     operationId="updateRecordById",
+     *     tags={"Notebook"},
+     *     summary="Обновление выбранной записи",
+     *     @OA\Parameter(
+     *          name="id",
+     *          description="Note id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *     @OA\RequestBody(
+     *          required=true,
+     *          description="Запрос",
+     *          @OA\JsonContent(
+     *              type="object",
+     *                      @OA\Property(
+     *                          property="initials",
+     *                          type="string",
+     *                          example="Bob Big Finger"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="company",
+     *                          type="string",
+     *                          example="Future"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="phone",
+     *                          type="string",
+     *                          example="88005553535"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="email",
+     *                          type="string",
+     *                          example="bobbigone@gmail.com"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="birthday",
+     *                          type="string",
+     *                          example="1935-04-15T00:00:00.000000Z"
+     *                      ),
+     *                      @OA\Property(
+     *                          property="photo",
+     *                          type="string",
+     *                          example="uuid()"
+     *                      ),
+     *          ),
+     *     ),
+     *     @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/Notebook")
+     *     ),
+     *     @OA\Response(
+     *          response="404",
+     *          description="Resource Not Found",
+     *     ),
+     * )
      */
     public function update(UpdateNotebookRequest $request, string $id)
     {
         $note = Notebook::query()->findOrFail($id);
+        abort_if(empty($note), Response::HTTP_NOT_FOUND);
         $note->fill($request->validated())->save();
         return $note;
     }
 
     /**
-     * Remove the specified resource from storage.
+     * @OA\Delete(
+     *     path="api/v1/notebook/{id}",
+     *     operationId="deleteRecordById",
+     *     tags={"Notebook"},
+     *     summary="Удаление выбранной записи",
+     *     description="Удаляет запись и возвращает пустой ответ",
+     *     @OA\Parameter(
+     *          name="id",
+     *          description="Note id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=204,
+     *          description="No content",
+     *       ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Resource Not Found"
+     *      )
+     * )
      */
     public function destroy(string $id)
     {
-        $note = Notebook::query()->findOrFail($id);
+        $note = Notebook::query()->find($id);
+        abort_if(empty($note), Response::HTTP_NOT_FOUND);
         $note->delete();
         return response(null, 204);
     }
